--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta charset="UTF-8">
 </head>
 <body style="background-color:#7d7d7d;">
-<>
+<h1> Új iphonek: </h1>
+<h2> Iphone XS </h2> 
 <body>
 </html>
