--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 <body style="background-color:#7d7d7d;">
 <h1> Új iphonek: </h1>
 <h2> Iphone XS </h2> 
-<body>
+<img src="xs.png" alt="iphone xs" />
+</body>
 </html>
