--- a/index.html
+++ b/index.html
@@ -5,8 +5,14 @@
 <meta charset="UTF-8">
 </head>
 <body style="background-color:#7d7d7d;">
+<center>
 <h1> Új iphonek: </h1>
 <h2> Iphone XS </h2> 
 <img src="xs.png" alt="iphone xs" />
+<h2> Iphone XS Max </h2>
+<img src="xsmax.jpg" alt="iphone xs iphone xs max" />
+<h2> Iphone XR </h2>
+<img src="xr.png" alt="iphone xr" />
+</center>
 </body>
 </html>
